website/static/css/custom.css
/* ... */
.seeMore-category .text-category {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  text-decoration-line: underline;
  color: #2CC3D5;
  margin-right: 5%;
  margin-top: -0.5%;
}

.pages-content-category .navigation {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.navigation .from {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 20px;
  color: #8ca0b3;
  margin-right: 0.5%;
}

.navigation .here {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 20px;
  color: #607b99;
}

a.link-from{
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 20px;
  color: #8CA0B3;
  text-decoration: none;
}

.toc .toggleNav ul li.navListItemActive a {
  font-weight: bold;
}

.cards .card-0 {
  background: linear-gradient(201.73deg, #6D8CE5 -10.36%, #517BF2 45.63%, #4D6CC5 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
  margin-left: 0%;
}

.cards .card-1 {
  background: linear-gradient(201.73deg, #87DDE8 -10.36%, #2CC3D5 45.63%, #2498A8 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
}

.cards .card-2 {
  background: linear-gradient(201.73deg, #788CA3 -10.36%, #607B99 45.63%, #485C73 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
}

.cards .card-3 {
  background: linear-gradient(201.73deg, #9EE3FF -10.36%, #55CFFF 45.63%, #51B2DD 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
  margin-left: 0%;
}

.cards .card-4 {
  background: linear-gradient(201.73deg, #514F64 -10.36%, #2C2A46 45.63%, #312F44 117.2%, #312F44 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
}

.cards .card-5 {
  background: linear-gradient(201.73deg, #FBB3C4 -10.36%, #F66689 45.63%, #C85C77 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
}

.cards .card-6 {
  background: linear-gradient(201.73deg, #93D2AA -10.36%, #4DCB7B 45.63%, #4AA86C 117.21%);
  border: 1px solid rgba(96, 123, 153, 0.15);
  box-sizing: border-box;
  border-radius: 8px;
  width: 27%;
  overflow: hidden;
  min-height: fit-content;
  height: 209px;
  transition: transform 0.4s ease;
  margin-left: 5%;
  margin-bottom: 3%;
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 2%;
  margin-left: 0%;
}

.title-area {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 100%;
  color: #FFFFFF;
  text-overflow: ellipsis;
}

.abstract-area {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 150%;
  color: #FFFFFF;
  text-overflow: ellipsis;
}

.text-area {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  color: #ffffff;
  margin-right: 5%;
  margin-top: -0.5%;
}


.modal-beta {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  
}

/* Modal Content */
.modal-beta-content {
  position: relative;
  background-color: #fefefe;
  margin: auto;
  padding: 0;
  border: 1px solid #888;
  width: 339px;
  max-width: 95%;
  min-height: fit-content;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
  -webkit-animation-name: animatetop;
  -webkit-animation-duration: 0.4s;
  animation-name: animatetop;
  animation-duration: 0.4s;
  box-sizing: border-box;
  box-shadow: 2px 0px 10px rgba(96, 123, 153, 0.3);
  border-radius: 8px;
}

/* Add Animation */
@-webkit-keyframes animatetop {
  from {top:-300px; opacity:0} 
  to {top:0; opacity:1}
}

@keyframes animatetop {
  from {top:-300px; opacity:0}
  to {top:0; opacity:1}
}


.modal-beta-header {
  padding: 20px 16px;
  background: #4DCB7B;
  color: white;
  border-radius: 8px 8px 0px 0px;
  display: flex;
  flex-direction: row;
  margin: auto;
}

.modal-beta-body {
  padding: 20px 16px;
  min-height: 140px;
}

.modal-beta-footer {
  padding: 2px 16px;
  background-color: #5cb85c;
  color: white;
}
/* ... */

